--- a/Ep6_ExploringTheWorld/index.css
+++ b/Ep6_ExploringTheWorld/index.css
@@ -57,3 +57,22 @@
     height: 60%;
     border-radius: 2%;
 }
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 50px;
+}
+.shimmer-card{
+
+    width: 300px;
+    height: 250px;
+    background-color: blanchedalmond;
+}
+
+.filter-option{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
